# hackathon-todo-list

phase-1/: CLAUDE.md  README.md  pyproject.toml
phase-1/.claude/agents/: todo-spec-reviewer.md
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/console-todo-app/: 2-create-specification.spec.prompt.md  3-create-implementation-plan.plan.prompt.md  4-create-task-list.tasks.prompt.md  5-implementation-complete.implementation.prompt.md
phase-1/history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
phase-1/specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/001-console-todo-app/checklists/: requirements.md
phase-1/specs/001-console-todo-app/contracts/: cli_api.md
phase-1/src/: main.py
phase-1/src/cli/: console_interface.py
phase-1/src/models/: task.py
phase-1/src/services/: task_manager.py
phase-1/tests/: conftest.py
phase-1/tests/integration/: test_add_task.py  test_delete_task.py  test_toggle_task.py  test_update_task.py  test_view_tasks.py
phase-1/tests/unit/: test_task.py  test_task_manager.py
phase-2/: CLAUDE.md  Dockerfile  README.md  check_all_tables.py  check_tables.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  test_connection.py
phase-2/.claude/agents/: auth-flow-handler.md  fastapi-backend-developer.md  neon-db-manager.md  nextjs-app-router-ui-generator.md
phase-2/.claude/skills/auth-skill/: SKILL.md
phase-2/.specify/memory/: constitution.md
phase-2/backend/: init_db.py  main.py  requirements.txt  todo_app.db
phase-2/backend/src/: database.py
phase-2/backend/src/middleware/: jwt.py  (+1 more)
phase-2/frontend/: README.md  package-lock.json  package.json  tailwind.config.js
phase-2/frontend/app/: globals.css  layout.tsx  page.tsx
phase-2/frontend/context/: AuthContext.tsx
phase-2/frontend/hooks/: useAuth.ts
phase-2/frontend/lib/: constants.ts  utils.ts
phase-2/frontend/services/: api.ts  auth.ts  tasks.ts
phase-2/frontend/types/: auth.ts  tasks.ts
phase-2/specs/001-backend-api/: plan.md  spec.md  tasks.md
phase-2/specs/001-todo-backend-api/: spec.md
phase-2/specs/002-user-auth/: plan.md  spec.md  tasks.md
phase-2/specs/003-frontend-web-app/: plan.md  spec.md  tasks.md
phase-2/src/: authorization.py  dependencies.py  error_handler.py  main.py  services.py  validation.py
phase-2/src/db/: db.py  init_db.py
phase-2/src/models/: schemas.py  task.py
phase-2/src/routes/: tasks.py
phase-2/tests/: conftest.py
phase-2/tests/integration/: test_endpoints.py
phase-2/tests/unit/: test_models.py  test_services.py
(+42 files in other folders)
